[package]
name = "forgedtiles"
version = "0.1.0"
edition = "2021"

[dependencies]
maths-rs = { version = "0.2.6", features = [
    "short_types",
    "short_hand_constructors",
    "casts",
    "serde",
    "hash",
] }
rayon = "1"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
